[package]
name = "tauri-plugin-localhost"
version = "0.1.0"
description = "Expose your apps assets through a localhost server instead of the default custom protocol."
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
log.workspace = true
thiserror.workspace = true
tiny_http = "0.12"
http = "1"
