[package]
name = "tauri-plugin-log"
version = "0.0.0"
description = "Configurable logging for your Tauri app."
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
serde_repr = "0.1"
byte-unit = "5"
fern = "0.6"
log = { workspace = true, features = ["kv_unstable"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }

[features]
colored = ["fern/colored"]
