[package]
name = "tauri-plugin-log"
version = "2.0.0-alpha.6"
description = "Configurable logging for your Tauri app."
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = [ "--cfg", "docsrs" ]
rustdoc-args = [ "--cfg", "docsrs" ]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
serde_repr = "0.1"
byte-unit = "4.0"
log = { workspace = true, features = [ "kv_unstable" ] }
time = { version = "0.3", features = [ "formatting", "local-offset" ] }
fern = "0.6"

[target."cfg(target_os = \"android\")".dependencies]
android_logger = "0.11"

[target."cfg(target_os = \"ios\")".dependencies]
swift-rs = "1.0.1"
objc = "0.2"
cocoa = "0.24"

[features]
colored = [ "fern/colored" ]
