[package]
name = "tauri-plugin-persisted-scope"
version = "0.1.3"
description = "Save filesystem and asset scopes and restore them when the app is reopened."
authors = [ "Tauri Programme within The Commons Conservancy" ]
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
log.workspace = true
thiserror.workspace = true
aho-corasick = "1.1"
bincode = "1"

[features]
protocol-asset = [ "tauri/protocol-asset" ]
